*** empty log message ***

--- a/Documents/pohjat/termit.tex
+++ b/Documents/pohjat/termit.tex
@@ -2,7 +2,11 @@ TTK91=Auvo H‰kkisen kehitt‰m‰ ohjelmointikieli, joka l‰heisesti muistuttaa symbo
 
 KOKSI=Auvo H‰kkisen kirjoittama konekielisimulaattori, joka toteuttaa TTK-91-kielen.
 
-J‰rjestelm‰=Projektimme tuotos, Kohahdus
+Kohahdus=Syksyn 2006 ohjelmistotuotantoprojekti (t‰m‰ projekti)
+
+TitoTrainer=Projektimme tuotos
+
+J‰rjestelm‰=Projektimme tuotos
 
 Ohjelma=Opiskelijan kirjoittama TTK91-ohjelma, eli vastaus johonkin teht‰v‰‰n
 
