*** empty log message ***

--- a/Documents/suunnitteludokumentti/dokumentti.tex
+++ b/Documents/suunnitteludokumentti/dokumentti.tex
@@ -5,8 +5,8 @@
 % usein k‰ytettyjen pakkauksien \usepackage-komennot, jotka pit‰‰
 % aktivoidaan ottamalla rivin alusta kommenttimerkki pois.
 %
-% \usepackage{graphicx}		% kuvien k‰sittelyyn
-% \usepackage{url}		% verkko-osoitteiden tulostamiseen
+\usepackage{graphicx}		% kuvien k‰sittelyyn
+\usepackage{url}		% verkko-osoitteiden tulostamiseen
 %
 
 % Sis‰lt‰‰ kansi- ja etusivun tietoja.
