--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -23,9 +23,13 @@ Explorer-selaimilla.
 
 
 
+
+
 \section{Sanasto}
 
 \input{termit}
+
+
 
 
 
@@ -34,25 +38,21 @@ Explorer-selaimilla.
 Tämä luku kuvaa järjestelmän HTML-sivut ja sen, mitä toimintoja ne tarjoavät käyttäjälle.
 
 \subsection{Rekisteröityminen}
-
 Rekiströintisivulla opiskelija rekisteröityy järjestelmän käyttäjäksi. Rekisteröinti vaatii seuraavat 
 tiedot: etunimi, sukunimi, käyttökieli, sähköposti, opiskelijanumero tai henkilötunnus, sekä
 vapaavalintainen tunnus ja salasana
 
 \subsection{Käyttäjätietojen muokkaaminen}
-
 Käyttäjätietosivulla sisäänkirjautunut käyttäjä voi muokata rekisteröintitietojaan, poislukien 
 tunnus joka on valittu rekisteröidyttäessä. 
 
 \subsection{Kirjautuminen}
-
 Kirjautumissivulla käyttäjä syöttää tunnuksensa, salasanansa ja pudotusvalikosta kurssin nimi.
 Kurssivalinta määrittää, että minkä kurssin suorituksiin opiskelijan tekemät vastaukset tallennetaan.
 Opettajan ollessa kyseessä kurssivalinnalla ei ole merkitystä. Jos kirjautuminen onnistuu, näytetään
 tehtävälistaus. Jos kirjautuminen epäonnistuu, käyttäjä palautetaan kirjautumissivulle.
 
 \subsection{Kurssien ja tehtävien valinta (opettaja)}
-
 Kirjautumisen jälkeen opettajalle näytetään kurssilistaus josta opettaja voi siirtyä
 kurssin statistiikka-sivulle. Kurssilistauksesen alla on myös lomake uuden kurssin
 luomista varten.
@@ -62,7 +62,6 @@ ja nimi, sekä viimeinen muokkauspäivä ja muokkaaja. Listattuja tehtäviä voi muok
 poistaa, sekä käynnistää uuden tehtävän luomisen.
 
 \subsection{Tehtävän määrittely (opettaja)}
-
 Tehtävänmäärittelysivulla opettaja voi luoda uuden tehtävän tai muokata olemassa olevaa
 tehtävää. Tehtävälle määritellään nimi, tehtävänanto, tarkastustyyppi (malliratkaisu/kiinteät arvot),
 tehtävätyyppi (täyttötehtävä/ohjelmointitehtävä), sekä tarkastuskriteerit ja kriteerien palautteet.
@@ -83,13 +82,11 @@ Listassa näkyy salasanaa lukuunottamatta kaikki rekisteröintitiedot.
 Käyttäjän tiedot toteutetaan toisessa kehitysiteraatiossa.
 
 \subsection{Tehtävien valinta (opiskelija)}
-
 Kirjautumisen jälkeen opiskelijalle näytetään tehtävälista, josta opiskelija voi valita
 tehtävän ratkaistavaksi. Listassa näytetään tehtävän kieli, aihepiiri ja nimi, sekä tieto
 onko opiskelija yrittänyt jo tehtävän suoritusta ja onko yritys onnistunut.
 
 \subsection{Tehtävään vastaaminen (opiskelija)}
-
 Opiskelijan ratkaistavaksi valitsemasta tehtävästä näytetään nimi ja tehtävänanto,
 mahdollinen valmis koodi mikäli kyseessä on täyttötehtävä, sekä tekstialue johon
 opiskelija kirjoittaa vastauksensa. Lisäksi on linkki jolla pääsee takaisin tehtävälistaukseen.
@@ -99,6 +96,10 @@ takaisin tehtävävastaussivulle. Sivulla näytetään samat tiedot kuin alussa, mutt
 lisäksi näytetään palautetta tehtävän ratkaisun onnistumisesta/epäonnistumisesta.
 
 Tehtävään vastaaminen toteutetaan toisessa kehitysiteraatiossa.
+
+
+
+
 
 \section{Arkkitehtuurisuunnitelma}
 
@@ -129,6 +130,11 @@ asioiksi.
 
 \section{Tietokanta}
 
+\begin{figure}[h]
+	\includegraphics[width=14cm] {database_diagram.eps}
+	\caption{Tietokantakaavio}
+\end{figure}
+
 Tietotokannan rakenteen määrää eAssari kehys. Rakenne on kuvattu liitteessä 1. Ajanpuutteesta johtuen
 module-tietokantataulua ei tulla käyttämään sen mahdollistamassa laajuudessa. Kyseisestä taulusta
 luodaan vain yksi rivi kantaan, johon sitten viitataan muista tauluista. Lisäksi jokainen tehtävä
@@ -143,13 +149,13 @@ Eli SQL-lauseita tulee vain ks. luokkaan eikä muualle koodiin. DBHandler-luokast
 staattisen DBHandler.getInstance() -metodin avulla. Tämä tarkoittaa sitä, että ko. luokkaa voidaan 
 käyttää virtuaalikoneen sisällä mistä vaan.
 
-\section{Osajärjestelmät}
 
 
+%\section{Osajärjestelmät}
+%\section{Komponentit}
 
-\section{Komponentit}
 
-
+<Tänne sekvenssikaaviot>
 
 \section{Luokat}
 
@@ -174,8 +180,23 @@ Composer
 %	void setTestValue(int value)
 %	void setTestOperator(int optype)
 
+\section{JSP sivujen sekvenssikaaviot}
 
+\subsection{Register.jsp}
 
+\subsection{Login.jsp}
+
+\subsection{TaskList.jsp}
+
+\subsection{******List.jsp}
+
+\subsection{Report.jsp}
+
+\subsection{UserInfo.jsp}
+
+\subsection{Composer.jsp}
+
+\subsection{Answer-servlet}
 
 
 
