*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -186,6 +186,12 @@ Composer
 
 \subsection{Login.jsp}
 
+\begin{figure}[h]
+	\includegraphics[width=14cm] {sekvenssikaaviot/Login.eps}
+	\caption{Tietokantakaavio}
+\end{figure}
+
+
 \subsection{TaskList.jsp}
 
 \subsection{******List.jsp}
@@ -197,10 +203,6 @@ Composer
 \subsection{Composer.jsp}
 
 \subsection{Answer-servlet}
-
-
-
-
 
 
 
