--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -180,31 +180,63 @@ Composer
 %	void setTestValue(int value)
 %	void setTestOperator(int optype)
 
+
+
 \section{JSP sivujen sekvenssikaaviot}
+Tämä luku esittelee toteutettavien JSP-sivujen toimintalogiikan. Sekvenssikaaviot
+esittelevät tärkeimmät eri toiminnoissa käytetyt luokat ja metodit, menemättä
+kuitenkaan aivan samalle tasolle kuin lopullinen ohjelmakoodi. Myöskään kaikkia
+toimintoja ei kuvata, esimerkiksi erilaisten listausten näyttäminen katsotaan niin
+suoraviivaiseksi, että ne onnistuvat ilman erillistä suunnitelmaa. 
+
+Sekvenssikaavioit esittävät miten TitoTrainer/eAssari käsittelee tapahtuman, jossa
+käyttäjä on täyttänyt lomakkeen ja lähettänyt sen palvelimen käsiteltäväksi. Vain
+onnistuneet tapahtumat on kuvattu, esimerkiksi väärän salasanan syöttäminen 
+kirjautumislomakkeeseen katkaisee kuvatun sekvenssin ja palauttaa käyttäjälle
+virheilmoituksen. Käyttäytyminen poikkeustilanteissa kuvataan tarkemmin
+käyttöliittymäsuunnitelmassa (Liite 1).
+
 
 \subsection{Register.jsp}
 
 \subsection{Login.jsp}
-
 \begin{figure}[h]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Login.eps}
-	\caption{Tietokantakaavio}
+	\caption{Kirjautuminen}
+\end{figure}
+
+
+\subsection{TeacherTaskList.jsp}
+\begin{figure}[h]
+	\includegraphics[width=14cm] {sekvenssikaaviot/Kurssinluonti.eps}
+	\caption{Kurssin luominen}
 \end{figure}
 
 
 \subsection{TaskList.jsp}
-
-\subsection{******List.jsp}
+Ei kaaviota. Sisältää vain opiskelijan tehtävälistauksen. 
 
 \subsection{Report.jsp}
+Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 \subsection{UserInfo.jsp}
+Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 \subsection{Composer.jsp}
+\subsection{TeacherTaskList.jsp}
+\begin{figure}[h]
+	\includegraphics[width=14cm] {sekvenssikaaviot/Taskinluonti.eps}
+	\caption{Tehtävän luominen}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[width=14cm] {sekvenssikaaviot/Taskin_muokkaaminen.eps}
+	\caption{Tehtävän muokkaaminen}
+\end{figure}
+
 
 \subsection{Answer-servlet}
-
-
+Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 
 
