--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -44,7 +44,8 @@ vapaavalintainen tunnus ja salasana
 
 \subsection{Käyttäjätietojen muokkaaminen}
 Käyttäjätietosivulla sisäänkirjautunut käyttäjä voi muokata rekisteröintitietojaan, poislukien 
-tunnus joka on valittu rekisteröidyttäessä. 
+tunnus joka on valittu rekisteröidyttäessä. Tämäm toiminnon ei tarvitse toimia opettajien tunnusten
+kanssa, mutta odotettavissa on, että opettajatunnusten tukeminen ei aiheuta minkäänlaista lisätyötä.
 
 \subsection{Kirjautuminen}
 Kirjautumissivulla käyttäjä syöttää tunnuksensa, salasanansa ja pudotusvalikosta kurssin nimi.
@@ -142,12 +143,80 @@ sisältyy jokaiseen kurssiin. Eli kun tehtävä luodaan, niin se liitetään jokaisee
 kun kurssi luodaan, niin jokainen tehtävä lisätään kyseiseen uuteen kurssiin. Tämä linkitys tapahtuu
 "taskinmodule"-tietokantataulussa. 
 
-Kokonaan käyttämättä jäävät eassarin taulut taskattributes, pluginparameters, pluginparamattributes
-
 Tietokantaa käytetään aina DBHandler-luokan kautta, joka piilottaa tietokantarakenteen yksityiskohdat.
 Eli SQL-lauseita tulee vain ks. luokkaan eikä muualle koodiin. DBHandler-luokasta voidaan luoda instanssi
 staattisen DBHandler.getInstance() -metodin avulla. Tämä tarkoittaa sitä, että ko. luokkaa voidaan 
 käyttää virtuaalikoneen sisällä mistä vaan.
+
+\subsection{tasktype}
+Tasktype on eAssari-kehyksen tarvitsema taulu, joka määrittelee tehtävätyypin käyttämät
+Analyzer ja Displayer luokat. Tauluun on mahdollista tallentaa myös muuta tehtävätyyppikohtaista
+tietoa, mutta todennäköistä on että näitä ei tulla käyttämään.
+
+\subsection{task}
+Task määrittelee tehtävän. Itse task-taluun tallentaan lähinnä tehtävän nimi ja luojan nimi,
+tehtävän kriteerit, kuvaus, palautteet yms lisätään yleiskäyttöiseen attributevalues-tauluun.
+
+\subsection{course}
+Määrittelee kurssin nimen ja tunnisteen. Tähän tauluun viitataan useista muista taluista,
+jotta esimerkikisi opiskelijoiden suoritukset voidaan kirjata tietylle kurssille.
+
+\subsection{module}
+Luotuja tehtäviä ei liitetä suoraan kursseihin, vaan moduuleihin ja moduulit liitetään
+kursseihin. Kurssiin voi liittää useita moduuleja, mutta yhtä moduulia ei voi lisätä
+useaan kurssiin. TitoTrainer ei käytä moduuleja siinä laajuudessa kuin tietokannan
+rakenne mahdollistaisi, vaan toteutuksen ja käyttöliittymien yksinkertaistamiseksi
+jokaiselle kurssille luodaan tarkalleen yksi moduuli johon lisätään kaikki tehtävät.
+
+\subsection{taskinmodule}
+Yhdistää tehtävän kursiin ja moduuliin. Normaalitapauksessa siis tehtävä lisättäisiin
+jonkin kurssin johonkin moduulin luomalla rivi taskinmodule-tauluun. 
+
+TitoTrainerin tapauksessa on määritelty, että kaikki tehtävät kuuluvat kaikkiin kursseihin,
+joten kun opettaja luo tehtävän, TitoTrainer luo automaattisesti yhtä monta taskinmodule-riviä
+kuin on kursseja. Samoin kun luodaan uusi kurssi, sille luodaan automaattisesti moduuli ja
+kaikki olemassa olevat tehtävät lisätään ko. moduuliin. Näin ollen aina pitää paikkansa,
+että Taskinmodule rivien määrä = Task rivien määrä * Course rivien määrä.
+
+\subsection{attributevalues}
+Yleiskäyttöinen varasto jonne voi tallentaa mitä tahansa lisätietoa koskien mitä tahansa
+muuta taulua. Tänne tallennetaan tehtävien kriteerit, palautteet, aihepiiri, esimerkkiratkaisu,
+ja lähes kaikki muu tieto tehtävästä nimeä lukuunottamatta. Lisäksi voidaan tallentaa esimerkiksi
+lisätietoja kursseista jos tarvetta ilmenee.
+
+\subsection{eauser}
+Taulu kaikkien käyttäjätietojen tallentamiseen. Sekä oppilaat ja opettajat tallennetaan
+tänne, erona on vain status-sarakkeen arvo.
+
+\subsection{storedanswer}
+Kun opiskelija vastaa tehtävään, vastaus sekä tiedot sen oikeellisuudesta tallennetaan.
+
+\subsection{studentmodel}
+Jokaista tehtävän vastausyritystä kohden luodaan storedanswer-tauluun yksi rivi.
+Studentmodel-taluun tallennetaan yksi rivi per tehtävä, vaikka vastausyrityksiä olisi
+useampia. Rivillle tallennetaan tieto siitä, onko tehtävä suoritettu onnistuneesti
+ja kuinka monta yritystä tehtävään on käytetty. Nämä tiedot olisi mahdollista päätellä
+koostefunktioden avulla storedanswer-taulusta, mutta ilmeisesti tehokkuuden parantamisksi
+on luotu erillinen koostetaulu.
+
+\subsection{taskattributes}
+Task-attributes on eAssarissa tarkoitettu kuvaamaan tehtävien attribuuttien rakennetta.
+eAssari ei kuitenkaan missään vaiheessa itse hyödynnä tätä taulua, eikä TitoTrainerkään
+sitä tarvitse, joten taulu jää täysin käyttämättä.
+
+\subsection{pluginparameters}
+Tämän taulun tarkoitus on jäänyt täysin hämärän peittoon, eAssari ei missään kohtaa
+koodissaan viittaa mihinkään plugineihin. TitoTrainerillä ei myöskään ole tälle 
+taululle mitään käyttöä, joten se jää täysin käyttämättä.
+
+\subsection{pluginparamattributes}
+Kuten pluginparameters.
+
+
+
+
+
+
 
 
 
@@ -155,7 +224,6 @@ käyttää virtuaalikoneen sisällä mistä vaan.
 %\section{Komponentit}
 
 
-<Tänne sekvenssikaaviot>
 
 \section{Luokat}
 
