*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -269,7 +269,7 @@ käyttöliittymäsuunnitelmassa (Liite 1).
 
 \subsection{Register.jsp}
 \begin{figure}[h]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjän luominen.eps}
+	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjän_luominen.eps}
 	\caption{Käyttäjän rekisteröityminen}
 \end{figure}
 \begin{figure}[h]
