--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -228,7 +228,7 @@ Kuten pluginparameters.
 
 
 \section{Luokat}
-
+ 
 \input{docs}
 
 
@@ -269,11 +269,11 @@ käyttöliittymäsuunnitelmassa (Liite 1).
 
 \subsection{Register.jsp}
 \begin{figure}[h]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjän_luominen.eps}
+	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjän luominen.eps}
 	\caption{Käyttäjän rekisteröityminen}
 \end{figure}
 \begin{figure}[h]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjätietojen muokkaaminen.eps}
+	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjätietojen_muokkaaminen.eps}
 	\caption{Käyttäjätietojen muokkaaminen}
 \end{figure}
 
