*** empty log message ***

--- a/Documents/suunnitteludokumentti/classes.tex
+++ b/Documents/suunnitteludokumentti/classes.tex
@@ -19,8 +19,7 @@ Return the negative feedback string of this Criterion \\
 
 {\tt 	public String serializeToXML()} \\
 Return a serialized copy of this Criterion in XML-format \\
-	
-	
+		
 {\tt 	public abstract boolean meetsCriterion(TitoState studentAnswer, TitoState modelAnswer);} \\
 Return true if student's answer meets the condition(s) of this criterion. Criterion
 types that also evaluate quality of the answer must return <code>true</code> if the 
@@ -58,6 +57,7 @@ Deserialize String value from XML string. Helper function for initSubClass() \\
 	
 {\tt 	protected static int parseXMLInt(String XML, String tagname)} \\
 Deserialize integer value from XML string. Helper function for initSubClass() \\
+
 
 
 
@@ -133,6 +133,132 @@ Add task to Course\\
 
 
 
+
+\subsection{Task}
+public class Task
+
+{\bf Modify existing Task class by adding the following methods}\\
+
+{\tt 		public String getName()} \\
+Return the name of this task\\
+	
+{\tt 		public void setName(String name)} \\
+Set the name of this task\\
+	
+{\tt 		public String getAuthor()} \\
+Return name of the last person who has modified this task\\
+
+{\tt 		public void setAuthor(String name)} \\
+Set "last task modification by" attribute to Name, set last-modification-timestamp to current data and time\\
+
+{\tt 		public Date getModificationDate()} \\
+Return the date and time this task was last modified\\
+
+
+
+
+
+\subsection{User}
+public class User 
+
+{\bf Modify existing User class by adding the following methods}\\
+
+{\tt		public static final String STATUS\_STUDENT = "student";} \\ 
+{\tt		public static final String STATUS\_TEACHER = "teacher";} \\ 
+	
+{\tt		public User()} \\ 
+Construct unitialized User object\\
+	
+{\tt		public User(String userID)} \\ 
+Construct unitialized User object with userid\\
+	
+{\tt		public void setLastName(String lastname)} \\ 
+Set last name of this user\\
+	
+{\tt		public void setFirstName(String firstname)} \\ 
+Set first name of this user\\
+	
+{\tt		public void setEmail(String email)} \\ 
+Set email address of this user\\
+
+{\tt		public void setUserID(String userID)} \\ 
+Set userID of this user\\
+
+{\tt		public String getStudentNumber()} \\ 
+Return student number of this user. This identifier maps to <code>aeuser.extid</code> in the database\\
+	
+{\tt		public void setStudentNumber(String studentnum)} \\ 
+Set student number of of this user\\
+	
+{\tt		public String getSocialSecurityNumber()} \\ 
+Return social security number of this user. This identifier maps to <code>aeuser.extid2</code> in the database\\
+	
+{\tt		public void setSocialSecurityNumber(String ssn)} \\ 
+Set social security number of this user\\
+	
+{\tt		public void setPassword(String pass)} \\ 
+Set password of this user to Pass\\
+	
+{\tt		public void setLanguage(String lang)} \\ 
+Set the preferred language of this user. The language is either "EN" or "FI\\
+	
+{\tt		public boolean isTeacher()} \\ 
+Return true of this user has the privelidges to add/remove/modify tasks and browse user statistics\\
+
+{\tt		public void setStatus(String status)} \\  
+{\tt		throws IllegalArgumentException if Status is not a valid Status string}\\
+Set user status (teacher / student)\\
+	
+{\tt		public boolean isValid()} \\
+Test validity of this user object. The object is considered valid if all data members are set with non-empty values.\\
+
+
+
+
+
+\subsection{Course}
+public class Course {
+
+{\bf Simple class for holding basic course information}\\
+
+{\tt		public Course(String name, String id)} \\
+Create new Course instance using the specified name and ID\\
+	
+{\tt 	    public String getName()} \\
+Return name of this course\\
+
+{\tt 	    public void setName(String name)} \\
+Set name of this course\\
+
+{\tt 	    public String getID()} \\
+Return course ID of this course\\
+
+
+
+
+
+\subsection{TitoAnalyzer}
+public class TitoAnalyzer implements AnalyzerInterface
+
+{\bf Class for analyzing tasks, required by eAssari. 
+
+Designed and implemented in 2nd development iteration. }\\
+
+
+
+
+
+\subsection{TitoDisplayer}
+public class TitoDisplayer implements DisplayerInterface
+
+{\bf Class for displaying tasks, required by eAssari. 
+
+Designed and implemented in 2nd development iteration. }\\
+
+
+
+
+
 \subsection{TitoState}
 public class TitoState
 
@@ -140,6 +266,5 @@ public class TitoState
 
 This class will provide methods for querying the TitoKone end state.
 
-Tämä luokka toteutetaan toisessa iteraatiossa}
-
+Designed and implemented in 2nd development iteration. }\\
 
