--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -214,45 +214,15 @@ koodissaan viittaa mihinkään plugineihin. TitoTrainerillä ei myöskään ole tälle
 taululle mitään käyttöä, joten se jää täysin käyttämättä.
 
 \subsection{pluginparamattributes}
-Kuten pluginparameters.
+Kuten pluginparameters, jää käyttämättä.
 
 
 
-
-
-
-
-
-
-%\section{Osajärjestelmät}
-%\section{Komponentit}
 
 
 \section{Luokat}
 \input{classes}
 
-
-%\section{Luokat}
-%\input{docs}
-
-
-DBConnectionPool
-Analyzer
-Displayer
-Feedback
-Composer
-+jsp:t eri toiminnoille
-
-% Nämä kesken (eikä pitänyt edes vielä suunnitella)
-%public abstract class Criterion 
-%	abstract boolean isValidAnswer(String answer)
-%	String getFailureFeedback()
-%	String getSuccessFeedback()
-%	boolean isQualityCriterion()
-%public abstract class SingleValueCriterion extends Criterion 
-%	boolean isValidAnswer(String answer)
-%	void setTestValue(int value)
-%	void setTestOperator(int optype)
 
 
 
@@ -271,25 +241,25 @@ virheilmoituksen.
 
 
 \subsection{Register.jsp}
-\begin{figure}[h]
+\begin{figure}[htb]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjän_luominen.eps}
 	\caption{Käyttäjän rekisteröityminen}
 \end{figure}
-\begin{figure}[h]
+\begin{figure}[ht]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjätietojen_muokkaaminen.eps}
 	\caption{Käyttäjätietojen muokkaaminen}
 \end{figure}
 
 
 \subsection{Login.jsp}
-\begin{figure}[h]
+\begin{figure}[ht]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Login.eps}
 	\caption{Kirjautuminen}
 \end{figure}
 
 
 \subsection{TeacherTaskList.jsp}
-\begin{figure}[h]
+\begin{figure}[ht]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Kurssinluonti.eps}
 	\caption{Kurssin luominen}
 \end{figure}
@@ -307,12 +277,12 @@ Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 \subsection{Composer.jsp}
 \subsection{TeacherTaskList.jsp}
-\begin{figure}[h]
+\begin{figure}[ht]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Taskinluonti.eps}
 	\caption{Tehtävän luominen}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 	\includegraphics[width=14cm] {sekvenssikaaviot/Taskin_muokkaaminen.eps}
 	\caption{Tehtävän muokkaaminen}
 \end{figure}
