*** empty log message ***

--- a/Documents/pohjat/termit.tex
+++ b/Documents/pohjat/termit.tex
@@ -6,7 +6,7 @@ Kohahdus=Syksyn 2006 ohjelmistotuotantoprojekti (t‰m‰ projekti)
 
 TitoTrainer=Projektimme tuotos
 
-J‰rjestelm‰=Projektimme tuotos
+J‰rjestelm‰=TitoTrainer
 
 Ohjelma=Opiskelijan kirjoittama TTK91-ohjelma, eli vastaus johonkin teht‰v‰‰n
 
