*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -241,26 +241,26 @@ virheilmoituksen.
 
 
 \subsection{Register.jsp}
-\begin{figure}[htb]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjän_luominen.eps}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {sekvenssikaaviot/Käyttäjän_luominen.eps}
 	\caption{Käyttäjän rekisteröityminen}
 \end{figure}
 \begin{figure}[ht]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Käyttäjätietojen_muokkaaminen.eps}
+	\includegraphics[width=15cm] {sekvenssikaaviot/Käyttäjätietojen_muokkaaminen.eps}
 	\caption{Käyttäjätietojen muokkaaminen}
 \end{figure}
 
 
 \subsection{Login.jsp}
 \begin{figure}[ht]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Login.eps}
+	\includegraphics[width=15cm] {sekvenssikaaviot/Login.eps}
 	\caption{Kirjautuminen}
 \end{figure}
 
 
 \subsection{TeacherTaskList.jsp}
 \begin{figure}[ht]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Kurssinluonti.eps}
+	\includegraphics[width=15cm] {sekvenssikaaviot/Kurssinluonti.eps}
 	\caption{Kurssin luominen}
 \end{figure}
 
@@ -278,12 +278,12 @@ Toteutetaan ja suunnitellaan toisessa iteraatiossa
 \subsection{Composer.jsp}
 \subsection{TeacherTaskList.jsp}
 \begin{figure}[ht]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Taskinluonti.eps}
+	\includegraphics[width=15cm] {sekvenssikaaviot/Taskinluonti.eps}
 	\caption{Tehtävän luominen}
 \end{figure}
 
 \begin{figure}[ht]
-	\includegraphics[width=14cm] {sekvenssikaaviot/Taskin_muokkaaminen.eps}
+	\includegraphics[width=15cm] {sekvenssikaaviot/Taskin_muokkaaminen.eps}
 	\caption{Tehtävän muokkaaminen}
 \end{figure}
 
